# Limnoria-Plugins

./: .gitignore  README.md
BotNet/: README.md  __init__.py  config.py  crypto.py  messages.py  peer.py  plugin.py  protocol.py  pyproject.toml  test.py  transport.py  vim
CVESearch/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  setup.py  test.py
DuckHunt/: README.md  __init__.py  config.py  plugin.py  pyproject.toml
Etymology/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  setup.py  test.py
GitPulse/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  setup.py  test.py
GraphStats/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  setup.py  test.py
Greeter/: README.md  __init__.py  config.py  plugin.py  setup.py  test.py
GroqAI/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
PublicQuotes/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
RemindMe/: README.md  __init__.py  config.py  plugin.py  setup.py  test.py
TLDR/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  setup.py  test.py
TheMealDB/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
WaveBack/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  setup.py  test.py
