[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-botnet"
version = "1.2.0"
authors = [
    { name = "Stathis Xantinidis spithash@Libera" }
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
BotNet = "limnoria_botnet"

[tool.setuptools.package-dir]
"limnoria_botnet" = "."
"limnoria_botnet.local" = "local/"

[tool.setuptools.package-data]
"limnoria_botnet" = ["locales/*.po"]
