[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-cvesearch"
version = "0.0.0"
authors = [
    { name = "Stathis Xantinidis @spithash" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
CVESearch = "limnoria_cvesearch"

[tool.setuptools.package-dir]
"limnoria_cvesearch" = "."

[tool.setuptools.package-data]
"limnoria_cvesearch" = ["locales/*.po"]
