[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-duckhunt"
version = "2020.02.24+git"
authors = [
    { name = "Matthias Meusburger" },
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
DuckHunt = "limnoria_duckhunt"

[tool.setuptools.package-dir]
"limnoria_duckhunt" = "."

[tool.setuptools.package-data]
"limnoria_duckhunt" = ["locales/*.po"]
