[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-gitpulse"
version = "0.0.0"
authors = [
    { name = "Stathis Xantinidis @spithash" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
GitPulse = "limnoria_gitpulse"

[tool.setuptools.package-dir]
"limnoria_gitpulse" = "."

[tool.setuptools.package-data]
"limnoria_gitpulse" = ["locales/*.po"]
