[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-graphstats"
version = "0.0.0"
authors = [
    { name = "Stathis Xantinidis @ https://github.com/spithash" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
GraphStats = "limnoria_graphstats"

[tool.setuptools.package-dir]
"limnoria_graphstats" = "."

[tool.setuptools.package-data]
"limnoria_graphstats" = ["locales/*.po"]
