[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-groqai"
version = "0.0.0"
authors = [
    { name = "Stathis Xantinidis spithash@Libera https://github.com/spithash" }
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
GroqAI = "limnoria_groqai"

[tool.setuptools.package-dir]
"limnoria_groqai" = "."
"limnoria_groqai.local" = "local/"

[tool.setuptools.package-data]
"limnoria_groqai" = ["locales/*.po"]
