[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-publicquotes"
version = "0.0.0"
authors = [
    { name = "Stathis Xantinidis @ https://github.com/spithash" }
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
PublicQuotes = "limnoria_publicquotes"

[tool.setuptools.package-dir]
"limnoria_publicquotes" = "."
"limnoria_publicquotes.local" = "local/"

[tool.setuptools.package-data]
"limnoria_publicquotes" = ["locales/*.po"]
